Fixed truncating labels on login form.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1006,7 +1006,7 @@ room-sidebar-width = 240px
     margin-bottom 20px
 
 .login-form
-  width 214px
+  width 219px
   margin-top 20px
   margin-bottom 20px
 
